fix scrollbar in filter

--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -40,6 +40,8 @@
   &::-webkit-scrollbar {
     width: 0;
   }
+
+  overflow: hidden;
 }
 
 .container__hidden {
